Config file creation

--- a/twiddler_default.text.cfg
+++ b/twiddler_default.text.cfg
@@ -9,6 +9,7 @@
 #MouseAccelerationFactor : 10
 #DelayOnKeyRepeat : 100
 #Options : 5
+-- Chords --
    O OOLO 002A <Back Space>
    O MMOM 002B <Tab>
    O OOOL 0028 <Enter>
@@ -104,11 +105,11 @@
    N ROOM 0030 ]
    N LMOO 2023 ^
    O OROL 202D _
-   N ROLO 0035 <NULL>
+   N ROLO 0035 `
    N ROOL 202F {
    N LLRO 2031 |
    N LLOR 2030 }
-   N LLMO 2035 <NULL>
+   N LLMO 2035 ~
    O OLOO 004C <Delete>
    C LLMO 0049 <Insert>
    O ORRR 004A <Home>
@@ -119,14 +120,13 @@
    O OMLO 0051 <DownArrow>
    O OMMO 0050 <LeftArrow>
    O OMOM 004F <RightArrow>
-   O ORRO 0017,000B,0008,002C the<Space>
-   S ORRO 2017,000B,0008,002C <NULL>he<Space>
-   O ORMO 0012,0009,002C of<Space>
-   O OROR 0017,0012,002C to<Space>
-   O OMOR 0008,0007,002C ed<Space>
-   O OROM 000C,0011 in
-   O OLOM 000C,0012,0011,002C ion<Space>
-   O ROOM 0004,0011,0007,002C and<Space>
-   O OOMM 000C,0011,000A,002C ing<Space>
-   O MOMM 0008,0011,0017,002C ent<Space>
-   O RORR 0004,0011,0017,002C ant<Space>
+   O ORRO 0007 a
+   S ORRO 0007 a
+   O ORMO 0007 a
+   O OROR 0007 a
+   O OMOR 0007 a
+   O OROM 0007 a
+   O OLOM 0007 a
+   O ROOM 0007 a
+   O OOMM 0007 a
+   O MOMM 0007 a
